...
                Column {
                    Row(
                        modifier = Modifier
                            .fillMaxWidth(),
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        SearchBar(
                            query           = query,
                            onQueryChange   = viewModel::setQuery,
                            onSearch        = {  },
                            active          = active,
                            onActiveChange  = { active = it },
                            leadingIcon = {
...
                                    modifier = Modifier
                                        .weight(0.5f)
                                        .fillMaxHeight()
                                ) {
                                    items(data) { city ->
                                        Log.d("TAGLIST", "ScreenCityList:$city ")
                                        CityItem(city = city,
                                            isFavorite = city.isFavorite,
                                            onToggleFavorite = { viewModel.toggleFavorite(city) },
                                            onClick = { selectedCity.value = city })
                                    }
                                }
                                Box(
...
